Drastic API changes (simplifications, auto-immutable versions of mutable calls)

--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "async": "*",
     "pg": "*"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "tap": "*"
+  },
   "bin": {},
-  "scripts": {}
+  "scripts": {
+    "test": "tap test"
+  }
 }
