Move test/ -> tests/ and use ES6 via babel

--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "author": "Christopher Brown <io@henrian.com> (http://henrian.com)",
   "dependencies": {},
   "devDependencies": {
+    "babel-core": "^5.0.0",
     "mocha": "*"
   },
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha --compilers js:babel-core/register tests/"
   }
 }
