--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "license": "MIT",
   "author": "Christopher Brown <io@henrian.com> (http://henrian.com)",
-  "dependencies": {},
   "devDependencies": {
+    "declarations": "*",
+    "typescript": "*"
+  },
+  "testDependencies": {
     "babel-core": "^5.0.0",
     "mocha": "*"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register tests/"
+    "test": "make test"
   }
 }
