Add Connection#executePromise(), which works if there is a global variable 'Promise'

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
   },
   "files": [
     "node_modules/declarations/node/node.d.ts",
+    "promise.d.ts",
     "commands/CreateTable.ts",
     "commands/Delete.ts",
     "commands/Insert.ts",
