--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "license": "MIT",
   "author": "Christopher Brown <io@henrian.com> (http://henrian.com)",
   "devDependencies": {
-    "babel-core": "^5.0.0",
-    "declarations": "*",
-    "mocha": "*",
-    "typescript": "*"
+    "babel-core": "5.8.35",
+    "declarations": "0.1.10",
+    "mocha": "2.4.5",
+    "typescript": "1.8.9"
   },
   "scripts": {
     "test": "make test"
