Move compilerOptions into tsconfig files

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "typescript": "^2.6.1"
   },
   "scripts": {
-    "prepare": "tsc -t ES6 -m commonjs -d",
-    "pretest": "tsc -p tests -t ES6 -m commonjs",
+    "prepare": "tsc -d",
+    "pretest": "tsc -p tests",
     "test": "mocha tests/",
     "clean": "tsc -m commonjs -d --listEmittedFiles | sed 's/^TSFILE: //' | xargs rm -v"
   }
