--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   "devDependencies": {
     "@types/mocha": "^2.2.48",
     "@types/node": "latest",
+    "coveralls": "^3.0.0",
     "mocha": "^5.0.1",
+    "nyc": "^11.4.1",
     "typescript": "^2.7.2"
   },
   "scripts": {
     "prepare": "tsc -d",
     "pretest": "tsc",
-    "test": "mocha",
+    "test": "nyc mocha",
+    "posttest": "nyc report --reporter=text-lcov | coveralls || true",
     "clean": "tsc -d --listEmittedFiles | grep '^TSFILE: ' | sed 's/^TSFILE: //' | xargs rm -v"
   }
 }
