--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "license": "MIT",
   "author": "Christopher Brown <io@henrian.com>",
   "devDependencies": {
-    "@types/mocha": "^2.2.48",
-    "@types/node": "latest",
-    "coveralls": "^3.0.0",
-    "mocha": "^5.0.1",
-    "nyc": "^11.4.1",
-    "typescript": "^2.7.2"
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^13.1.8",
+    "coveralls": "^3.0.9",
+    "mocha": "^7.0.0",
+    "nyc": "^15.0.0",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "prepare": "tsc -d",
